--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,4 @@
-<!-- View for creating a new `Post` -->
-<!-- See http://guides.rubyonrails.org/form_helpers.html#dealing-with-basic-forms for more information -->
+<!-- Form start -->
+<div class="max-w-screen-md" data-controller="posts" data-target="posts.form">
+  <%= render "form" %>
+</div>
