Fix minor typo.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CodeingChallenge</title>
+    <title>CodingChallenge</title>
     <%= csrf_meta_tags %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag "application", media: "all", "data-turbolinks-track": "reload" %>
